# engrave

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  configure.ac  system.h
filters/: Makefile.am  ascii85.c  ascii85.h  auxweights.ps  bg.c  cellmask.ps  ct.c  filter.c  filter.h  tiffout.c  tiffout.h  tile32.c  tile32.ps  tile32f.c  tile32f.h  tile32v.ps  weightfunc.c  weightfunc.h
share/: Makefile.am  getopt.c  getopt.h  getopt1.c  misc.c  misc.h
test/: Gates.tif  Gates_cmyk.tif  Makefile  gravure.300ppi.tif  smp.tif  smp_usm.tif  test.tif
